Fix font flickering on render

--- a/app/dashboard/components/edit-shift-dialog.css
+++ b/app/dashboard/components/edit-shift-dialog.css
@@ -68,7 +68,6 @@
 }
 
 .IconButton {
-  font-family: inherit;
   border-radius: 100%;
   height: 25px;
   width: 25px;
